# tinlp

./: .gitignore  README  compress_repo.sh  pyproject.toml  test_suite.sh
mini-papers/: bibliography.bib  paper-51-comp-morph-presentation.txt  paper-51-comp-morph.tex
mini-papers/scripts/: paper-51-00-workbook.py  paper-51-10-latex-tables.py  paper-51-comp-morph-feature-metrics.json  paper-51-comp-morph-model-choice-metrics.json
mini-papers/scripts/data/: README
tests/: README  test_21_tokenizer.py  test_22_categorized_corpus.py
tests_generic/: test_21_tokenizer.py  test_22_categorized_corpus.py  test_23_glove_vectors.py  test_23_ngram.py  test_31_naive_bayes.py  test_32_bpe.py  test_33_cv.py  test_33_metrics.py  test_34_ngram_clf.py  test_41_perceptron.py  test_43_nn_ngram.py
tests_generic/data/: bpe_lrg_test.json  bpe_scd_train.txt  bpe_test.json  bpe_train.txt  homemade-wines.txt  nn_ngram_bpe.json
tests_generic/data/cc_subdir/: EXPECTED.json
tests_generic/data/cc_tsv/: data.tsv  test.tsv
tests_generic/data/conll2003/: README  eng-20140.train  eng-8201.json  eng-8201.testa
tests_generic/data/lang_identification/: README  test.csv  train.csv
tests_generic/data/unimorph/: README  swe-test  swe-train
tests_labs/: test_23_glove_vectors.py  test_31_naive_bayes.py  test_32_bpe.py  test_33_cv.py  test_34_ngram_classifier.py  test_41_perceptron.py  test_43_nn_ngram.py
tinlp/: clf.py  eval.py  lm.py  nn.py
tinlp/utils/: data.py  pfex.py  text.py  tokenizer.py
tinynlp/: clf.py  lm.py
tinynlp/utils/: data.py  tokenizer.py
(+4 files in other folders)
