[project]
name = "tinlp"
version = "0.0.1"
authors = [{name="Gustaf Gren", email="gustaf.gren@ling.su.se"},]
description = "Tiny NLP library"
dependencies = ["numpy","tqdm"]

[project.optional-dependencies]
dev = ["pytest"]
nn = ["torch"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tinlp"]
